syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

message OfferInstanceIdRequest {
	int32 OfferInstanceId = 1;
}

message DealerData {
   string FirstName = 1;
   string LastName = 2;
   string JobTitle = 3;
   string PhoneNumber = 4;
   string Email = 5;
}
